Fix checkboxes not showing they are checked

--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -144,7 +144,7 @@
     }
   }
 
-  &__checkbox {
+  &__categories {
     overflow-y: scroll;
     max-height: 185px;
     margin-top: 13px;
